--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="dark_grey">#181818</color>
     <color name="white">#ffffff</color>
     <color name="green">#009900</color>
+    <color name="orange">#ffff381a</color>
 </resources>
