--- a/app/src/main/res/layout-v11/reminders_row.xml
+++ b/app/src/main/res/layout-v11/reminders_row.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="48dp"
+        android:background="?android:attr/activatedBackgroundIndicator">
 
         <view
             android:layout_width="10dp"
