--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -2,19 +2,19 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/dark_grey"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".RemindersActivity"
-                android:background="@color/dark_grey">
+                tools:context=".RemindersActivity">
 
     <ListView
+        android:id="@+id/reminders_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/reminders_list_view"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         tools:listitem="@layout/reminders_row"/>
 </RelativeLayout>
