--- a/app/src/main/res/layout/reminders_row.xml
+++ b/app/src/main/res/layout/reminders_row.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="50dp"
-              android:background="@color/dark_grey">
+              android:background="@color/dark_grey"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="?android:attr/activatedBackgroundIndicator">
+        android:background="?android:attr/activatedBackgroundIndicator"
+        android:orientation="horizontal">
 
 
         <view
+            android:id="@+id/row_tab"
+            class="android.view.View"
             android:layout_width="10dp"
             android:layout_height="match_parent"
-            class="android.view.View"
-            android:id="@+id/row_tab"
             android:background="@color/green"/>
 
         <TextView
+            android:id="@+id/row_text"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/reminder"
-            android:id="@+id/row_text"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            android:gravity="center_vertical"
-            android:padding="10dp"
             android:ellipsize="end"
-            android:maxLines="1"/>
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:text="@string/reminder"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
     </LinearLayout>
+
     <view
         class="android.view.View"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#000"/>
+
     <view
         class="android.view.View"
         android:layout_width="fill_parent"
