--- a/app/src/main/res/menu/menu_reminders.xml
+++ b/app/src/main/res/menu/menu_reminders.xml
@@ -1,13 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".RemindersActivity">
-    <item android:id="@+id/action_new"
-          android:title="@string/new_reminder"
-          android:orderInCategory="100"
-          android:showAsAction="never"/>
+    <item
+        android:id="@+id/action_new"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/new_reminder"/>
 
-      <item android:id="@+id/action_exit"
-            android:title="@string/exit"
-            android:orderInCategory="200"
-            android:showAsAction="never"/>
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/exit"/>
 </menu>
